# misc

./: README.md
bee/: bee.cabal
bee/app/: Main.hs
bee/src/: Lib.hs
bee/test/: Spec.hs
net/: README.md  net.cabal  stack.yaml
net/src/: Lib.hs
net/test/: Spec.hs
robot/: robot.cabal  stack.yaml
robot/src/: Lib.hs
robot/test/: Spec.hs
